// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gux-form-field-radio #render should render component as expected (1) 1`] = `
<gux-selector-card-beta class="gux-disabled gux-simple" variant="simple">
  <mock:shadow-root>
    <div class="gux-content">
      <div class="gux-icon">
        <slot name="icon"></slot>
      </div>
      <gux-truncate max-lines="2">
        <slot name="label"></slot>
      </gux-truncate>
      <slot name="input"></slot>
      <span class="gux-screenreader">
        <slot name="content"></slot>
      </span>
    </div>
  </mock:shadow-root>
  <label for="second" slot="label">
    Card Label
  </label>
  <input aria-describedby="gux-content-i" disabled="" id="second" name="example2" slot="input" type="radio" value="card-label">
  <gux-icon decorative="" icon-name="fa/diamond-regular" slot="icon">
    <span id="gux-content-i" slot="content">
      A second label for a sample selector card. Used in Spark WCL.
    </span>
  </gux-icon>
</gux-selector-card-beta>
`;

exports[`gux-form-field-radio #render should render component as expected (2) 1`] = `
<gux-selector-card-beta class="gux-disabled gux-simple" variant="simple">
  <mock:shadow-root>
    <div class="gux-content">
      <div class="gux-icon">
        <slot name="icon"></slot>
      </div>
      <gux-truncate max-lines="2">
        <slot name="label"></slot>
      </gux-truncate>
      <slot name="input"></slot>
      <span class="gux-screenreader">
        <slot name="content"></slot>
      </span>
    </div>
  </mock:shadow-root>
  <label for="third" slot="label">
    Card Label
  </label>
  <input checked="" disabled="" id="third" name="example3" slot="input" type="radio" value="card-label">
  <gux-icon decorative="" icon-name="fa/diamond-regular" slot="icon"></gux-icon>
</gux-selector-card-beta>
`;

exports[`gux-form-field-radio #render should render component as expected (3) 1`] = `
<gux-selector-card-beta class="gux-simple" variant="simple">
  <mock:shadow-root>
    <div class="gux-content">
      <div class="gux-icon">
        <slot name="icon"></slot>
      </div>
      <gux-truncate max-lines="2">
        <slot name="label"></slot>
      </gux-truncate>
      <slot name="input"></slot>
      <span class="gux-screenreader">
        <slot name="content"></slot>
      </span>
    </div>
  </mock:shadow-root>
  <label for="fourth" slot="label">
    A longer card label example
  </label>
  <input id="fourth" name="example4" slot="input" type="radio" value="card-label">
  <gux-icon decorative="" icon-name="fa/diamond-regular" slot="icon"></gux-icon>
</gux-selector-card-beta>
`;
